--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
     </head>
     <body>
         <main id="root">not rendered</main>
-        <script src="./App.js"></script>
+        <script src="./App.jsx"></script>
     </body>
 </html>
